application/istio-config/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: golang-app-vs
  namespace: golang-app
spec:
  hosts:
  - "*"
  gateways:
  - golang-app-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: golang-app-service
        port:
          number: 80
